--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,4 +9,4 @@ updates:
     directory: "/build/" # Location of package manifests
     schedule:
       interval: "weekly"
-    versioning-strategy: widen
+    versioning-strategy: increase-if-necessary
