--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,5 @@ updates:
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "/build/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
     versioning-strategy: increase-if-necessary
